# microsigma

./: .envrc  .eslintrc.json  .gitignore  .prettierrc  README.md  drizzle.config.ts  next.config.js  package-lock.json  package.json  sqlite.db
migrations/: 0000_init.sql
migrations/meta/: 0000_snapshot.json  _journal.json
src/: config.ts  db.ts  schema.ts
src/ai/: README.md  pyproject.toml
src/ai/ai/: agent.py  cli.py  constants.py  db.py
src/app/: globals.css  layout.tsx  utils.ts
src/app/activity/: layout.tsx  page.tsx
src/app/activity/actions/: removeActivity.ts  saveActivity.ts
src/app/activity/components/: ActivityCalendar.css  ActivityCalendar.tsx  ActivityForm.tsx
src/app/components/: NavLink.tsx
src/app/declaration/: layout.tsx  page.tsx
src/app/declaration/components/: ActivityCalendar.tsx
src/app/declaration/fetchers/: getRecentCalendarData.tsx  getRecentRevenue.tsx
src/app/revenue/: layout.tsx  page.tsx
src/app/revenue/[year]/: loading.tsx  page.tsx
src/app/revenue/components/: RevenueChart.tsx  YearSelector.tsx
