[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Amaury"]
readme = "README.md"

[tool.poetry.scripts]
ai = "ai.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-ai = "^0.0.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
